      - copy constructor: forbidden now.
    - system/worker:
      - Fixed typo which resulted in some action dependencies being lost while
        merging remove and unpack actions.
      - Fixed typos which resulted in many false positives when checking for
        temporary broken pre-depends.
    - download/manager:
      - Added multiple inclusion guards to the header.
  * doc:
    - examples:
      - Added 'show-upgradeable' example.
    - reference:
      - Documented static part of the library.
      - Added a build infrastructure.
  * debian:
    - rules:
      - Moved starting buildpoint to top directory (from 'cpp').
    - control:
      - Added build-dependency on doxygen.
      - Added new binary package 'libcupt2-doc-experimental'.
      - The package libcupt2-dev-experimental now suggests
        libcupt2-doc-experimental.
      - Added build-dependency on libgcrypt11-dev.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 26 Sep 2010 13:20:47 +0300

cupt2 (2.0.0~alpha1) UNRELEASED; urgency=low

  * Re-implemented in C++ (and subset of C++0x).

  * console:
    - The '--installed-only' option now works under 'shell' command.
    - The 'config-dump' subcommand no longer accepts arguments.
  * lib:
    - cache/sourceversion:
      - Support multiple tarballs.
    - config:
      - Implemented issuing detailed error messages when facing syntax errors
        in configuration files.
    - cache:
      - Implemented refusing expired Release files.
  * downloadmethods:
    - wget:
      - Implemented.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 26 Sep 2010 12:31:09 +0300

cupt (1.5.14) unstable; urgency=low

  * doc:
    - cupt_vs_apt:
      - Documented not handling the difference between 'specific' and
        'general' APT pin types. (Closes: #586347)
  * Cupt:
    - Cache:
      - ArchitecturedRelation:
        - Implemented architecture wildcards support. (Closes: #587354)
  * debian/control: