@@ -42,6 +42,9 @@ cupt2 (2.0.0~alpha2~) UNRELEASED; urgency=low
         temporary broken pre-depends.
     - download/manager:
       - Added multiple inclusion guards to the header.
+    - download/method:
+      - 'getNumericAcquireSuboptionForUri': renamed to
+        'getIntegerAcquireSuboptionForUri'.
   * doc:
     - examples:
       - Added 'show-upgradeable' example.
